# bmsspy

./: .gitignore  CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  setup.cfg  subsec.tex  test.ipynb
benchmarking/: algorithm_benchmark.py  benchmark.py  big_o_time.ipynb  charts.ipynb  data_struct_benchmarking.py  gridscale_benchmark.py  requirements.txt  sp_tree.ipynb
benchmarking/outputs/: algorithm_time_tests.csv  benchmark_time_tests.csv  bmssp_dijkstra_big_o_ratios.csv  data_struct_time_tests.csv  gridscale_time_tests.csv  pypy_algorithm_time_tests.csv  pypy_gridscale_time_tests.csv
benchmarking/utils/: bmssp_alternatives.py  bmssp_heap.py  fast_data_structure.py  quicksplit.py  time_case.py
bmsspy/: __init__.py  bmssp_data_structure.py  bmssp_data_structure_algo.py  bmssp_solver.py  bmssp_star_solver.py  core.py  data_structure.py  entrypoint.py  heap_data_structure.py  quicksplit.py  rbtree.py  solvers.py
bmsspy/helpers/: fast.py  heapdict.py  (+3 more)
cpp/: CMakeLists.txt  build.sh
cpp/bindings/: bmssp_data_structure_bindings.cpp  castro_bindings.cpp  quicksplit_bindings.cpp  rbtree_bindings.cpp
cpp/src/: bmssp_data_structure.cpp  bmssp_data_structure.hpp  castro.hpp  quicksplit.cpp  quicksplit.hpp  rbtree.cpp
doc_template/: module.html.jinja2
docs/: search.js
test/: 01_basic.py  01_bmssp.py  02_bmssp_star.py  02_comprehensive_bmssp.py  03_bmssp_big.py  03_rbtree.py  04_data_structure_parity.py  04_rbtree.py  05_quicksplit.py  06_gridgraph_tester.py  07_constant_degree.py  08_castro_tester.py
utils/: docs.sh  prettify.sh
(+82 files in other folders)
